--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
 	font-family: 'Whitney';
 	src: url('https://cdn.amog-us.club/fonts/Regular.woff') format('woff');
 	font-weight: 400;
@@ -24,6 +24,27 @@
 	font-family: 'Whitney';
 	src: url('https://cdn.amog-us.club/fonts/Bold.woff') format('woff');
 	font-weight: 700;
+} */
+
+@font-face {
+	font-family: 'Whitney';
+	src: url('https://cdn.skyra.pw/whitney-font/v2/Book.woff') format('woff');
+	font-weight: 400;
+}
+@font-face {
+	font-family: 'Whitney';
+	src: url('https://cdn.skyra.pw/whitney-font/v2/Medium.woff') format('woff');
+	font-weight: 500;
+}
+@font-face {
+	font-family: 'Whitney';
+	src: url('https://cdn.skyra.pw/whitney-font/v2/Semibold.woff') format('woff');
+	font-weight: 600;
+}
+@font-face {
+	font-family: 'Whitney';
+	src: url('https://cdn.skyra.pw/whitney-font/v2/Bold.woff') format('woff');
+	font-weight: 700;
 }
 
 * {
@@ -39,4 +60,16 @@ body {
 	font-family: Whitney, 'Source Sans Pro', ui-sans-serif, system-ui,
 		-apple-system, 'system-ui', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif,
 		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+a,
+button,
+div,
+input,
+label,
+select,
+span,
+strong,
+textarea {
+	outline: 0;
 }
